# fastapi-users-example

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  app.py  auth.py  main.py
api/db/: __init__.py  db.py
api/managers/: __init__.py  user.py
api/models/: __init__.py  base.py  user.py
api/routes/: __init__.py  api_routes.py  auth.py  heartbeat.py  home.py  users.py
api/schema/: __init__.py  user.py
